--- a/friendlychat-master/web-start/index.html
+++ b/friendlychat-master/web-start/index.html
@@ -111,6 +111,17 @@
 <!-- ***********************************************************************************************************************
      * TODO(DEVELOPER): Paste the initialization snippet from: Firebase Console > Overview > Add Firebase to your web app. *
      *********************************************************************************************************************** -->
+<script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "",
+    authDomain: "my-friendly-app.firebaseapp.com",
+    databaseURL: "https://my-friendly-app.firebaseio.com",
+    storageBucket: "my-friendly-app.appspot.com",
+  };
+  firebase.initializeApp(config);
+</script>
 <script src="scripts/main.js"></script>
 </body>
 </html>
